[gd_scene load_steps=8 format=2]

[ext_resource path="res://Weapons/Laser/WeaponLaser.gd" type="Script" id=1]
[ext_resource path="res://Weapons/Regular/Weapon_Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Projectiles/Projectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/icon.png" type="Texture" id=4]

[sub_resource type="Animation" id=3]
resource_name = "activate"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CastPoint/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "active"
length = 0.5
loop = true
step = 0.25

[sub_resource type="Animation" id=5]
resource_name = "deactivate"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CastPoint/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6.0, 0.0 ]
}

[node name="WeaponLaser" type="Node2D"]
rotation = 1.5708
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="WeaponStats" parent="." instance=ExtResource( 2 )]
fire_rate = 0.5
projectile = ExtResource( 3 )

[node name="CastPoint" type="Position2D" parent="."]
position = Vector2( -16, 0 )
rotation = -1.5708

[node name="Sprite" type="Sprite" parent="CastPoint"]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="CastPoint"]
rotation = 3.14159
points = PoolVector2Array( 0, 0, 0, 95 )
texture_mode = 2
end_cap_mode = 2

[node name="RayCast2D" type="RayCast2D" parent="CastPoint"]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 100 )
collide_with_areas = true
collide_with_bodies = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/activate = SubResource( 3 )
anims/active = SubResource( 4 )
anims/deactivate = SubResource( 5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
